# Tek2

ASM/: Makefile  memcpy.asm  memset.asm  strcasecmp.asm  strchr.asm  strcmp.asm  strcspn.asm  strlen.asm  strncmp.asm  strpbrk.asm  strrchr.asm  strstr.asm
C/FTP/: Makefile
C/FTP/include/: include.h
C/FTP/serveur/: check_arg.c  cmd_handler.c  help.c  init.c  loop.c  main.c  quit.c  user.c  utils.c
C/teams/: Makefile  RFC_protocol.txt  to_complete_rfc.txt
C/teams/.users/67b9dcef-8ee2-4bfb-91a6-4ed8ff84d771/: name.txt
C/teams/client/: Makefile
C/teams/client/include/: client.h
C/teams/client/src/: check_args.c  function.c  function2.c  handle_cmd.c  handle_line.c  loop.c  main.c  multiple_args.c  recv_from_serv.c  single_args.c
C/teams/libs/myteams/: logging_client.h  logging_server.h
C/teams/server/: Makefile
C/teams/server/include/: commands.h  my.h  status_codes.h  structs.h  teams.h  users.h  utils.h
C/teams/server/src/: check_params.c  connection.c  initialization.c  main.c  main_loop.c  usage.c
CPP/Arcade/: Makefile  main.cpp
CPP/Arcade/Component/: Component.cpp  Component.hpp
CPP/Arcade/Core/: Core.cpp
CPP/Arcade/Errors/: Errors.hpp
CPP/Arcade/Event/: Event.cpp  Event.hpp
CPP/Arcade/Games/Menu/: Makefile  Menu.cpp  Menu.hpp  libManagement.cpp
CPP/Arcade/Games/Nibbler/: Makefile  arcade_nibbler.cpp  arcade_nibbler.hpp  libManagement.cpp
CPP/Arcade/Games/Pacman/: Makefile  libManagement.cpp  pacman.cpp  pacman.hpp
CPP/Arcade/Ncurses/: Makefile  libManagement.cpp  libNcurses.cpp
CPP/Arcade/Sdl2/: Makefile  libManagement.cpp  libSdl.cpp
CPP/Arcade/Sfml/: Makefile  libManagement.cpp  libSfml.cpp
CPP/Arcade/Sprite/: food.txt  head.txt  pac.txt  pacgum.txt  pacitopink.txt
CPP/Arcade/include/: Core.hpp  IComponent.hpp  IDisplay.hpp  IEvent.hpp  IGame.hpp  LibManagement.hpp  libNcurses.hpp  libSdl.hpp  libSfml.hpp  pacman.hpp
CPP/Arcade/map/: map.txt
CPP/Indie/: .gitignore  CMakeLists.txt  compile.sh
CPP/Indie/assets/arrow/: arrow.mtl
CPP/Indie/assets/bedrock/: bedrock.mtl
CPP/Indie/assets/chest/: chest.mtl
CPP/Indie/assets/enderman/: enderman.iqm
CPP/Indie/assets/grass/: grass.mtl
CPP/Indie/assets/obsidian/: obsidian.mtl
CPP/Indie/assets/steve/: steve.iqm
CPP/Indie/assets/stone/: stone.mtl
CPP/Indie/assets/tnt/: tnt.mtl
CPP/Indie/assets/villager/: villager.iqm
CPP/Indie/assets/walk/: walk.iqm
CPP/Indie/assets/wood/: wood.mtl
CPP/Indie/assets/zombie/: zombie.iqm
CPP/Indie/cmake/: Findraylib.cmake
CPP/Indie/docs/: CompoentsDoc.md  EntitiesDoc.md  SystemDoc.md  engineClassDiagram.puml
CPP/Indie/include/: CameraSystem.hpp  Factory.hpp  GameComponents.hpp  Map.hpp  WindowManager.hpp  loop.hpp  test.hpp
CPP/Indie/include/Encapsulation/: RaylibCamera.hpp  RaylibCamera2D.hpp  RaylibGamepad.hpp  RaylibKeyboard.hpp  RaylibModel.hpp  RaylibModelAnimation.hpp  RaylibMouse.hpp  RaylibMusic.hpp  RaylibSound.hpp  RaylibText.hpp  RaylibTexture.hpp  RaylibWindow.hpp
CPP/Indie/include/Engine/: Component.hpp  ComponentManager.hpp  EngineDef.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  System.hpp  SystemManager.hpp  World.hpp
CPP/Indie/include/Error/: Error.hpp  RaylibModelAnimationError.hpp
CPP/Indie/include/System/: Animation3D.hpp  ButtonActionSystem.hpp  CollisionExplosion.hpp  ControlCamera.hpp  ControlPlayer.hpp  DropBomb.hpp  EndEffect.hpp  EndGame.hpp  IsAlive.hpp  IsBombAlive.hpp  Render2D.hpp  RenderText.hpp  Timer.hpp  mRender3D.hpp
CPP/Indie/saves/: save.indie
CPP/Indie/src/: CameraSystem.cpp  WindowManager.cpp  mSystem.cpp  main.cpp
CPP/Indie/src/Encapsulation/: RaylibCamera.cpp  RaylibCamera2D.cpp  RaylibGamepad.cpp  RaylibKeyboard.cpp  RaylibModel.cpp  RaylibModelAnimation.cpp  RaylibMouse.cpp  RaylibMusic.cpp  RaylibSound.cpp  RaylibText.cpp  RaylibWindow.cpp
CPP/Indie/src/Error/: Error.cpp  RaylibModelAnimationError.cpp
CPP/Indie/src/Game/: Factory.cpp  Map.cpp  main_loop.cpp
CPP/Indie/src/Game/System/: Animation3D.cpp  ButtonActionSystem.cpp  CollisionExplosion.cpp  ControlCamera.cpp  ControlPlayer.cpp  DropBomb.cpp  EndEffect.cpp  EndGame.cpp  IsAlive.cpp  IsBombAlive.cpp  Render2D.cpp  RenderText.cpp  Timer.cpp  mRender3D.cpp
CPP/Indie/src/Game/baseEntities/: Camera.json  background.json  backgroundObject.json  bedrock.json  bomb.json  button.json  components.exemple.json  explosion.json  gameTimer.json  map.json  menu.json  music.json  player1.json  player2.json  player3.json  player4.json  scoreBoard.json  wall_destructible.json  wall_undestructible.json
CPP/Indie/src/World/: ComponentManager.cpp  EntityManager.cpp  EventManager.cpp  System.cpp  SystemManager.cpp  World.cpp
CPP/Indie/tests/: CMakeLists.txt
CPP/Indie/tests/sandBox/: main.cpp
CPP/NTS/: Makefile  ex.nts
CPP/NTS/include/: include.hpp
CPP/NTS/include/Circuit/: Circuit.hpp
CPP/NTS/include/Components/: C4001.hpp  C4008.hpp  C4011.hpp  C4030.hpp  C4069.hpp  C4071.hpp  C4081.hpp  IComponent.hpp  all_comps.hpp
CPP/NTS/include/Gates/: Gates.hpp
CPP/NTS/include/Pins/: Pin.hpp  main.cpp
CPP/NTS/include/SpecialComponents/: Clock.hpp  False.hpp  Input.hpp  Output.hpp  True.hpp
CPP/NTS/include/Utils/: Utils.hpp
CPP/NTS/src/: main.cpp
CPP/NTS/src/Circuit/: Circuit.cpp  Handle_cmd.cpp
CPP/NTS/src/Components/: C4001.cpp  C4008.cpp  C4011.cpp  C4030.cpp  C4069.cpp  C4071.cpp  C4081.cpp
CPP/NTS/src/Factory/: Factory.cpp
CPP/NTS/src/Gates/: AND.cpp  NAND.cpp  NOR.cpp  NOT.cpp  OR.cpp  XNOR.cpp  XOR.cpp
CPP/NTS/src/Pins/: Pin.cpp
CPP/NTS/src/SpecialComponents/: Clock.cpp  False.cpp  Input.cpp  Output.cpp  (+1 more)
HASKELL/ImageCompressor/: Makefile  compressor.cabal  liste  package.yaml  stack.yaml
HASKELL/ImageCompressor/app/: Main.hs
HASKELL/ImageCompressor/src/: Clusterings.hs  Clusters.hs  ParseArgs.hs  Pixels.hs  Random.hs  Utils.hs
HASKELL/Wolfram/: Makefile  package.yaml  stack.yaml  wolfram  wolfram.cabal
HASKELL/Wolfram/.stack-work/: stack.sqlite3
HASKELL/Wolfram/app/: Main.hs
HASKELL/Wolfram/src/: Display.hs  Options.hs  Rules.hs  Wolfram.hs
HASKELL/Wolfram/test/: Spec.hs
(+79 files in other folders)
